<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChatActivity">
    <include layout="@layout/toolbar_layout" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/messages"
        android:layout_above="@id/sendLayout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/sendLayout">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mediaList"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <EditText
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/messageInput"
                android:hint="@string/message"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="Suspicious0dp" />

            <ImageButton
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                tools:ignore="Suspicious0dp"
                android:text="@string/add_media"
                android:id="@+id/addMedia"
                android:src="@drawable/ic_outline_image_24"
                android:tint="@color/colorDivider"
                android:background="@color/colorPrimaryDark"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" />

            <ImageButton
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                tools:ignore="Suspicious0dp"
                android:text="@string/send"
                android:id="@+id/sendButton"
                android:src="@drawable/ic_baseline_send_24"
                android:tint="@color/colorDivider"
                android:background="@color/colorPrimaryDark"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>